K8S/memcached/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "testing"
  name: "memcached"
spec:
  selector:
    app.kubernetes.io/name: "memcached"
  ports:
    - name: "client"
      port: 11211
      protocol: "TCP"
      targetPort: 11211
