K8S/memcached/base/policy.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "memcached-external-access"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "memcached"
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: "prometheus"
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              required.cache: "memcached"
